--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browser": "^0.2.6",
     "browser-sync": "^3.0.2",
     "express": "^4.18.2",
-    "open": "^10.0.3"
+    "open": "^10.0.3",
+    "passport-google-oauth2": "^0.2.0"
   }
 }
