--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "browser": "^0.2.6",
     "browser-sync": "^3.0.2",
     "express": "^4.18.2",
-    "open": "^10.0.3"
+    "express-session": "^1.18.0",
+    "open": "^10.0.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
