--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
     "handlebars": "^4.7.8"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "@testing-library/dom": "^10.1.0",
+    "jest": "^29.7.0",
+    "jsdom": "^24.0.0"
+  },
+  "name": "my-project",
+  "jest": {
+    "verbose": true
   }
 }
