--- a/unitTestJS/package.json
+++ b/unitTestJS/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@playwright/test": "^1.44.0",
     "@types/node": "^20.12.11",
-    "fetch-mock": "^9.11.0"
+    "fetch-mock": "^9.11.0",
+    "jest": "^29.7.0"
   }
 }
